test category service