@@ -7,28 +7,29 @@ import com.tsk.ecommerce.entities.UserEntity;
 import com.tsk.ecommerce.entities.enumerations.ERole;
 import com.tsk.ecommerce.repositories.RoleEntityRepository;
 import com.tsk.ecommerce.repositories.UserEntityRepository;
+import com.tsk.ecommerce.services.tools.IObjectFinder;
 import com.tsk.ecommerce.services.user.impl.RegistrationServiceImpl;
 import com.tsk.ecommerce.services.validators.UserValidator;
+import com.tsk.ecommerce.shared.MockResource;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.validation.BindingResult;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class RegistrationServiceImplTest {
+
+    @InjectMocks
+    private RegistrationServiceImpl registrationServiceImpl;
     @Mock
     private UserEntityRepository userEntityRepository;
     @Mock
@@ -37,39 +38,27 @@ class RegistrationServiceImplTest {
     private PasswordEncoder passwordEncoder;
     @Mock
     private RoleEntityRepository roleRepository;
-    @InjectMocks
-    private RegistrationServiceImpl registrationServiceImpl;
+    @Mock
+    private IObjectFinder objectFinder;
+
+    private static final UserEntity USER_TOTO = MockResource.createMockUserToto();
+    private static final RoleEntity ROLE_USER = MockResource.createMockRole(ERole.ROLE_USER);
 
     @Test
     void registerPhase1() {
         //given
         SignUpRequestDto request = new SignUpRequestDto("toto", "toto@toto.com", "test1234");
         BindingResult bindingResult = mock(BindingResult.class);
-        UserEntity userEntity = getUserEntity();
-        UserEntity userMock = mock(UserEntity.class);
 
-        Mockito.when(userEntityRepository.save(any(UserEntity.class))).thenReturn(userEntity);
-        Mockito.when(userEntityRepository.findById(1L)).thenReturn(Optional.of(userMock));
-        Mockito.when(userMock.getRoles()).thenReturn(new ArrayList<>());
-        Mockito.when(roleRepository.findByNameIn(List.of(ERole.ROLE_USER))).thenReturn(getRoleEntities());
+        when(userEntityRepository.save(any(UserEntity.class))).thenReturn(USER_TOTO);
+        when(objectFinder.findById(userEntityRepository, "user", USER_TOTO.getId())).thenReturn(USER_TOTO);
+        when(roleRepository.findByNameIn(List.of(ERole.ROLE_USER))).thenReturn(Collections.singletonList(ROLE_USER));
 
         //when
-        UserEntity user = registrationServiceImpl.registerPhase1(request, bindingResult);
+        registrationServiceImpl.registerPhase1(request, bindingResult);
 
         //then
-        verify(userValidator).validateSignUp(request);
-        assertNotNull(user);
-        assertEquals(1L, user.getId());
-        assertEquals("toto", user.getUsername());
-    }
-
-    private static UserEntity getUserEntity() {
-        return new UserEntity(1L, "toto", "test1234", "toto@toto.com", "toto", "test", null);
-    }
-
-    private List<RoleEntity> getRoleEntities(){
-        List<RoleEntity> roleEntities = new ArrayList<>();
-        roleEntities.add(new RoleEntity(ERole.ROLE_USER));
-        return roleEntities;
+        verify(userValidator, times(1)).validateSignUp(request);
+        verify(userEntityRepository, times(2)).save(argThat(argument-> argument.getEmail().equals(request.getEmail())));
     }
 }
